hphp/hack/test/typecheck/array_get_tconst.php.exp
File "array_get_tconst.php", line 8, characters 12-13:
Invalid return type (Typing[4110])
File "array_get_tconst.php", line 6, characters 43-55:
Expected this::MyArray
File "array_get_tconst.php", line 4, characters 34-52:
But got darray<mixed, mixed>
